# ros-3d-interaction

./: rosdep.yaml  stack.xml
3d_interaction/: CMakeLists.txt  package.xml
blob3d/: CMakeLists.txt  mainpage.dox  manifest.xml
blob3d/colors/: dots.txt
blob3d/launch/: blobs_2_3d.launch  cmvision.launch
blob3d/nodes/: blobs_2_3d.py  dot_2_3d.py  look_at_blob_server.py
blob3d/src/: blobs_2_3d.cpp
blob3d/srv/: LookAtBlob.srv
external_camera_localizer/: CMakeLists.txt  mainpage.dox  manifest.xml
external_camera_localizer/data/: kinect_markers  object_4x4
external_camera_localizer/launch/: ar_pose_multi.launch  ar_pose_single_kinect.launch  ar_viz.vcg  cloud_registration.launch  frames.launch  localize_kinect.launch  localize_two_kinects.launch  pr2_frames.launch  pr2_static.launch  two_kinects.launch
external_camera_localizer/nodes/: publish_tf.py  tilt_scan_to_pointcloud.py
external_camera_localizer/src/: find_transform.cpp  transform_pointcloud.cpp
projected_interface_tools/: CMakeLists.txt  package.xml
projected_lightswitch_interface/: lightswitch_config.vcg  mainpage.dox  manifest.xml
projected_lightswitch_interface/launch/: interface_standalone.launch  prerequisites.launch
projected_lightswitch_interface/nodes/: click_to_if.py
projector_calibration/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
projector_calibration/msg/: Homography.msg
projector_calibration/nodes/: calibrate.py  gradient.py  grid_test.py  projector_demo.py  projector_test.py
projector_calibration/src/projector_calibration/: __init__.py
projector_interface/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py  standalone.vcg
projector_interface/cfg/: Interface.cfg
projector_interface/launch/: calibrate_and_circle+machine.launch  calibrate_and_circle.launch  filters.launch  interface_pr2.launch  interface_standalone.launch  interface_study.launch  interface_workstation.launch  letterboard_demo.launch  lightswitch_demo.launch  manipulation.launch  object_manipulation.launch  pr2_tabletop_manipulation.launch  tabletop_segmentation_overhead_kinect.launch  wii.launch
projector_interface/nodes/: adjust_pose.py  click.py  find_objects.py  object_circler.py  object_manipulation.py  point_projector.py
projector_interface/src/projector_interface/: __init__.py  _point_cloud.py  pycloud.py  treeable.py
projector_interface/srv/: CircleInhibit.srv  DrawPolygon.srv  GetCursorStats.srv  HilightObject.srv  SetSelectionMethod.srv
projector_interface/study/: 1_object_designation.py  2_closest_point.py  3_object_designation.py  3_random.py  4_object_designation.py  config_test.pkl  config_test.py  configure_screen.py  object_designation.py  point_tests.py  run_study.py  training.py
projector_interface/study/cfg/: camera.yaml  object_4x4
projector_interface/study/data/cara/: 1_object_designation_20-05-12-15.43.220666.mat  2_closest_point_20-05-12-15.49.487813.mat  3_random_20-05-12-15.53.062380.mat  4_object_designation_20-05-12-15.58.669918.mat
projector_interface/study/data/jim/: 1_object_designation_18-05-12-13.23.306007.mat
projector_interface/study/data/joe/: 4_object_designation_20-05-12-16.17.811902.mat
projector_interface/study/data/jordana/: 2_closest_point_17-05-12-14.42.878832.mat
projector_interface/study/data/kevin/: 1_object_designation_20-05-12-16.26.511309.mat  4_object_designation_20-05-12-16.39.557314.mat
projector_interface/study/data/kyle/: 1_object_designation_17-05-12-13.51.536631.mat  3_random_17-05-12-14.01.585713.mat
projector_interface/study/data/s01/: 1_object_designation_18-05-12-12.59.452901.mat  2_closest_point_18-05-12-13.02.558992.mat  3_random_18-05-12-13.06.602402.mat  4_object_designation_18-05-12-13.09.602061.mat
projector_interface/study/data/s03/: 2_closest_point_18-05-12-13.27.439595.mat  3_random_18-05-12-13.31.781133.mat  4_object_designation_18-05-12-13.35.380465.mat
projector_interface/study/data/s04/: 1_object_designation_20-05-12-16.07.192541.mat  2_closest_point_20-05-12-16.10.319586.mat  3_random_20-05-12-16.14.511270.mat
projector_interface/study/data/s05/: 1_object_designation_17-05-12-14.37.560023.mat  3_random_17-05-12-14.49.284212.mat  4_object_designation_17-05-12-14.56.239262.mat
projector_interface/study/data/s06/: 2_closest_point_20-05-12-16.31.049256.mat  3_random_20-05-12-16.35.847013.mat
projector_interface/study/data/s07/: 2_closest_point_17-05-12-13.56.971491.mat  4_object_designation_17-05-12-14.05.306346.mat
projector_interface/study/data/s08/: 2_closest_point_20-05-12-17.00.112856.mat
projector_interface/study/data/stephanie/: 1_object_designation_20-05-12-16.55.181810.mat  3_random_20-05-12-17.05.426799.mat  4_object_designation_20-05-12-17.13.486449.mat
projector_interface/study/launch/: configure_screen.launch  glass.launch  setup.launch  study_prereqs.launch
rcommander_interface/: mainpage.dox  manifest.xml
rcommander_interface/src/rcommander_interface/: behaviors.py
world_intersect/: CMakeLists.txt  intersect_pose.launch  mainpage.dox  manifest.xml  package.xml  point_head.launch  point_head.py  point_to_click.py  world_viz.vcg
world_intersect/launch/: intersect_pose.launch
world_intersect/nodes/: intersect_plane.py  mouse_click.py  test_click.py
world_intersect/src/: world_intersect.cpp
