<package>
  <name>projector_calibration</name>
  <version>1.0.0</version>
  <description>Provides a node for calibrating a projector to a camera with a known TF frame.</description>
  <maintainer email="lazewatd@engr.oregonstate.edu">Dan Lazewatsky</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/projector_calibration</url>
  <url type="bugtracker">https://github.com/OSUrobotics/ros-3d-interaction/issues</url>

  <author>Dan Lazewatsky</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>python-qt-bindings</run_depend>
  <run_depend>python-opencv</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>opencv2</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->

</package>